[package]
name = "temp_cloud_emulator"
version = "0.1.0"
authors = ["BuildTools <unconfigured@null.spigotmc.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
actix-web = "2.0"
actix-multipart = "0.2.0"
actix-rt = "1.0"
actix-files="0.2.1"
diesel = { version = "1.4.3", features = ["sqlite"] }
